--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-    </div>
-
+      <div id='0900' class='row time-block'>
+        <div class='hour col-md-1'>
+          9AM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+        
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
