--- a/index.html
+++ b/index.html
@@ -38,6 +38,70 @@
         <button class='btn saveBtn'><i class="fas fa-save"></i></button>
         <button class='btn checkBtn'><i class="fas fa-check"></i></button>
       </div>
+      <div id='1000' class='row time-block'>
+        <div class='hour col-md-1'>
+          10AM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+      <div id='1100' class='row time-block'>
+        <div class='hour col-md-1'>
+          11AM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+      <div id='1200' class='row time-block'>
+        <div class='hour col-md-1'>
+          12PM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+      <div id='1300' class='row time-block'>
+        <div class='hour col-md-1'>
+          1PM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+      <div id='1400' class='row time-block'>
+        <div class='hour col-md-1'>
+          2PM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+      <div id='1500' class='row time-block'>
+        <div class='hour col-md-1'>
+          3PM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+      <div id='1600' class='row time-block'>
+        <div class='hour col-md-1'>
+          4PM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
+      <div id='1700' class='row time-block'>
+        <div class='hour col-md-1'>
+          5PM
+        </div>
+        <textarea class='description col-md-8'></textarea>
+        <button class='btn saveBtn'><i class="fas fa-save"></i></button>
+        <button class='btn checkBtn'><i class="fas fa-check"></i></button>
+      </div>
         
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
